2006-04-11  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* tests/common.py (importModule): Include original exception
	string in the raised SystemExit.

2006-04-11  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/.cvsignore:
	* gobject/Makefile.am:
	* gobject/__init__.py:
	* gobject/gobjectmodule.c: (init_gobject):
	* gobject/pygobject.h:
	* tests/Makefile.am:
	* tests/common.py:

	Turn gobject into a package; move _gobject to gobject._gobject and
	add gobject/__init__.py. Update macros and testsuite.

2006-04-11  Johan Dahlin  <jdahlin@async.com.br>

	* configure.ac: Post release version bump

=== PyGObject 2.10.1 ===
2006-04-11  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Update

2006-04-11  Andy Wingo  <wingo@pobox.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* gobject/gobjectmodule.c (create_property): Parse unsigned int64
	constraints in param spec declaration using the "K" ParseTuple
	format unit, not L -- allows the full range of the datatype to be
	parsed. K format unit added in python 2.3.

2006-04-01  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* tests/test_properties.py: Add test for #335854.

	* pygtk.py.in (require): For version == '2.0', use a hardcoded
	pygtk path, recorded during build.

	* gobject/gobjectmodule.c (_pyg_strv_to_gvalue): Don't allow
	arbitrary sequences, only tuple or list, since a string is a
	sequence too.
	(pyg_object_new): Add a bit more detail to the exception string.

2006-01-16  Johan Dahlin  <johan@gnome.org>

	* Makefile.am: Include dsextras.py in the dist and install it.

2006-03-19  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/pygobject.c (pygobject_new_with_interfaces): Remove
	comment "It will currently not filter out interfaces already
	implemented by it parents.", since it is no longer true since
	2006-01-13.

=== PyGObject 2.10.0 ===
2006-01-16  Johan Dahlin  <johan@gnome.org>

	* NEWS: Update

2006-03-09 Michael Smith  <msmith@fluendo.com>
