@@ -101,7 +101,7 @@ GClosure *pyg_signal_class_closure_get(void);
 PyObject *pyg_object_descr_doc_get(void);
 
 
-extern PyTypeObject PyGObject_MetaType;
+extern PyTypeObject *PyGObject_MetaType;
 
 /* from pygobject.h */
 extern PyTypeObject PyGObject_Type;
